--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "~10.0.6",
     "@angular/platform-browser-dynamic": "~10.0.6",
     "@angular/router": "~10.0.6",
+    "@ngrx/store": "^9.2.0",
     "angular-animations": "0.0.10",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
